[gd_scene load_steps=9 format=2]

[ext_resource path="res://practice_completed.gd" type="Script" id=1]
[ext_resource path="res://godot_fontpack/Godot-Fontpack-master/fonts/droid-sans/DroidSans.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://godot_fontpack/Godot-Fontpack-master/fonts/montreal/Montreal-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://map_renderer.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="CubeMesh" id=4]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 260.0
margin_right = 763.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Practice Completed!"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 104.0
columns = 2

[node name="Label3" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 89.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Time:"

[node name="TimeLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 93.0
margin_right = 179.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "0:0:0"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 1024.0
margin_bottom = 147.0

[node name="UploadResultButton" type="Button" parent="VBoxContainer/CenterContainer2"]
margin_left = 419.0
margin_right = 605.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 3 )
text = "Upload Result"

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer"]
margin_top = 151.0
margin_right = 1024.0
margin_bottom = 190.0

[node name="Button" type="Button" parent="VBoxContainer/CenterContainer3"]
margin_left = 436.0
margin_right = 588.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"

[node name="ViewportCenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 194.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 11
size_flags_vertical = 3

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/ViewportCenterContainer"]
margin_left = 462.0
margin_top = 153.0
margin_right = 562.0
margin_bottom = 253.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="Viewport" type="Viewport" parent="VBoxContainer/ViewportCenterContainer/ViewportContainer"]
size = Vector2( 100, 100 )
size_override_stretch = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="VBoxContainer/ViewportCenterContainer/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.19077 )

[node name="MeshInstance" type="MeshInstance" parent="VBoxContainer/ViewportCenterContainer/ViewportContainer/Viewport"]
transform = Transform( 0.786148, 0, -0.618038, -0.255334, 0.910669, -0.324786, 0.562828, 0.413136, 0.715921, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="MapRenderer" parent="VBoxContainer/ViewportCenterContainer/ViewportContainer/Viewport" instance=ExtResource( 4 )]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/UploadResultButton" to="." method="_on_UploadResultButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer3/Button" to="." method="_on_Button_pressed"]
[connection signal="resized" from="VBoxContainer/ViewportCenterContainer" to="." method="_on_ViewportCenterContainer_resized"]
